Import Debian changes 2.06-13+deb12u1
grub2 (2.06-13+deb12u1) bookworm-security; urgency=medium
.
  [ Mate Kukri ]
  * SECURITY UPDATE: Crafted file system images can cause out-of-bounds write
    and may leak sensitive information into the GRUB pager.
    - d/patches/ntfs-cve-fixes/fs-ntfs-Fix-an-OOB-read-when-parsing-a-volume-
      label.patch:
      fs/ntfs: Fix an OOB read when parsing a volume label
    - d/patches/ntfs-cve-fixes/fs-ntfs-Fix-an-OOB-read-when-parsing-bs-for-
      index-at.patch:
      fs/ntfs: Fix an OOB read when parsing bitmaps for index attributes
    - d/patches/ntfs-cve-fixes/fs-ntfs-Fix-an-OOB-read-when-parsing-dory-
      entries-fr.patch:
      fs/ntfs: Fix an OOB read when parsing directory entries from resident and
      non-resident index attributes
    - d/patches/ntfs-cve-fixes/fs-ntfs-Fix-an-OOB-read-when-reading-data-fhe-
      reside.patch:
      fs/ntfs: Fix an OOB read when reading data from the resident $DATA +
      attribute
    - CVE-2023-4693
  * SECURITY UPDATE: Crafted file system images can cause heap-based buffer
    overflow and may allow arbitrary code execution and secure boot bypass.
    - d/patches/ntfs-cve-fixes/fs-ntfs-Fix-an-OOB-write-when-parsing-the-
      ATTRIBUTE_LIST-.patch:
      fs/ntfs: Fix an OOB write when parsing the $ATTRIBUTE_LIST attribute for
      the $MFT file
    - d/patches/ntfs-cve-fixes/fs-ntfs-Make-code-more-readable.patch
      fs/ntfs: Make code more readable
    - CVE-2023-4692
.
  [ Julian Andres Klode ]
  * Bump SBAT to grub,4
.
grub2 (2.06-13) unstable; urgency=medium
.
  [ Steve McIntyre ]
  * When *also* installing to the removable media path, include the
    relevant mokmanager binary. Closes: #1034409
.
  [ General Chaos ]
  * Allow initrd to contain spaces. Closes: #838177, #820838.
.
  [ Translators ]
  * Update lots of translations of debconf templates, thanks to the
    following:
    + Welsh (Dafydd Tomos)
    + German (Helge Kreutzmann). Closes: #1034850
    + Croatian (

--- a/debian/config.in
+++ b/debian/config.in
@@ -58,6 +58,10 @@ fi
 if [ "${GRUB_CMDLINE_LINUX_DEFAULT+set}" = set ]; then
   db_set grub2/linux_cmdline_default "$GRUB_CMDLINE_LINUX_DEFAULT"
 fi
+# Watch for the inverted logic here...
+if [ "${GRUB_DISABLE_OS_PROBER+set}" = set ]; then
+  db_set grub2/enable_os_prober "false"
+fi
 
 case @PACKAGE@ in
   grub-pc)
@@ -74,6 +78,7 @@ esac
 
 db_input ${priority} grub2/linux_cmdline || true
 db_input medium grub2/linux_cmdline_default || true
+db_input low grub2/enable_os_prober || true
 case @PACKAGE@ in
   grub-*efi*)
     db_input low grub2/force_efi_extra_removable || true
